fix: Make sure sponsor logos are readable on mobile too

--- a/styles/sponsors.scss
+++ b/styles/sponsors.scss
@@ -27,6 +27,7 @@
     margin: 0.5rem;
   }
   &--logo {
+    max-width: 100%;
     height: 100px;
   }
 
